@@ -1,6 +1,7 @@
 2008-06-30  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
-	* src/libYARP_OS/src/ResourceFinder.cpp: stub implementation.
+	* src/libYARP_OS/src/ResourceFinder.cpp: basic implementation
+	of policy for finding configuration files.
 
 	* src/libYARP_OS/include/yarp/os/ResourceFinder.h: stub for 
 	tool for helping find configuration files.
